--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,10 @@
 {
-  "name": "HelloIonic",
+  "name": "ionic-map-hilight-example",
   "private": "true",
   "devDependencies": {
     "ionic": "ionic-team/ionic-bower#1.3.4"
+  },
+  "dependencies": {
+    "angular-maphilight": "^1.0.0"
   }
 }
