--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
     "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-whitelist": "^1.3.3"
+    "cordova-plugin-whitelist": "^1.3.3",
+    "express": "^4.16.3",
+    "heroku-ssl-redirect": "0.0.4"
   },
   "cordova": {
     "plugins": {
