--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-sass": "^3.1.0"
   },
   "dependencies": {
+    "bower": "^1.8.4",
     "cordova-android": "7.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
@@ -17,6 +18,14 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "express": "^4.16.3",
     "heroku-ssl-redirect": "0.0.4"
+  },
+  "cacheDirectories": [
+    "node_modules",
+    "www/css",
+    "www/lib"
+  ],
+  "scripts": {
+    "postinstall": "bower install && gulp sass"
   },
   "cordova": {
     "plugins": {
