--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "gulp": "^3.5.6",
     "gulp-clean-css": "^3.7.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "jshint": "^2.9.5"
   },
   "dependencies": {
     "bower": "^1.8.4",
