--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "ionic-team/ionic-bower#1.3.4"
   },
   "dependencies": {
-    "angular-maphilight": "^1.0.0"
+    "maphilight": "^1.3.0",
+    "jQuery": "~2.2.4"
   }
 }
